--- a/src/main/resources/public/template/layout/portalLayout.html
+++ b/src/main/resources/public/template/layout/portalLayout.html
@@ -10,7 +10,7 @@
         <div class="alice-portal-container flex-column">
             <div class="portal-search-top">
                 <a href="/portal/portalMain">
-                    <img class="left" th:src="@{/assets/media/images/portalSearch/zenius_itsm_logo.svg}" alt="Alice">
+                    <img class="left" th:src="@{/assets/media/icons/icon_logo.svg}" width="174.72" height="25" alt="Alice">
                 </a>
                 <div class="portal-title">Technical Support</div>
                 <div class="right login" sec:authorize="isAuthenticated()" onclick="location.href='/layout'"
