--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -21,7 +21,7 @@
                 <div class="header">
                     <div class="icon">
                         <a th:attr="onclick=|goMenu('notice');|">
-                            <img th:src="@{/assets/media/images/portal/graphic_notice.png}"/>
+                            <img th:src="@{/assets/media/images/portal/img_portal_notice.png}" width="120" height="120" alt="Notice">
                         </a>
                     </div>
                     <h3 th:text="#{menu.notice.parent}"></h3>
@@ -34,7 +34,7 @@
                 <div class="header">
                     <div class="icon">
 	                    <a th:attr="onclick=|goMenu('faq');|">
-                            <img th:src="@{/assets/media/images/portal/graphic_faq.png}"/>
+                            <img th:src="@{/assets/media/images/portal/img_portal_faq.png}" width="120" height="120" alt="Faq">
 	                    </a>
                     </div>
                     <h3 th:text="#{menu.faq.parent}"></h3>
@@ -47,7 +47,7 @@
                 <div class="header">
                     <div class="icon">
                         <a th:attr="onclick=|goMenu('download');|">
-                            <img th:src="@{/assets/media/images/portal/graphic_download.png}"/>
+                            <img th:src="@{/assets/media/images/portal/img_portal_download.png}" width="120" height="120" alt="Download">
                         </a>
                     </div>
                     <h3 th:text="#{menu.download.parent}"></h3>
