--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -10,8 +10,8 @@
 <body>
 <div class="alice-portal-container flex-row">
     <div class="signup-background">
-        <img class="signup-logo" th:src="@{/assets/media/images/signup/zenius_itsm_logo.png}" alt="Zenius ITSM">
-        <img class="signup-main-image" th:src="@{/assets/media/images/signup/graphic_signup.png}">
+        <img class="signup-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
+        <img class="signup-main-image" th:src="@{/assets/media/images/signup/img_signup_main.png}" width="1310" height="800" alt="Signup Main">
         <div class="signup-login-face">
             <span class="signup-login-note" th:text="#{login.label.loginNote}"></span>
             <a class="signup-btn signup-btn-login" href="/login" id="sendLogin" th:text="#{login.btn.login}"></a>
