--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -11,8 +11,8 @@
 <body>
 <div class="alice-portal-container flex-row">
     <div class="login-background">
-        <img class="login-logo" th:src="@{/assets/media/images/signup/zenius_itsm_logo.png}" alt="Zenius ITSM">
-        <img class="login-main-image" th:src="@{/assets/media/images/login/graphic_login.png}">
+        <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
+        <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
     </div>
     <button type="button" class="login-btn login-btn-return" th:text="#{common.btn.return}"
             onclick="location.href='/portal/portalMain'"></button>
