--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
@@ -60,7 +60,7 @@
                 padding: 0.5rem 0.625rem; // 8px 10px
             }
             .date-icon {
-                background: url($icon-folder-path + "icon_calendar.png") no-repeat 100%-5 50%;
+                background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
                 background-color: #F7F8F9;
             }
 
