--- a/src/main/resources/public/template/layout/navigation.html
+++ b/src/main/resources/public/template/layout/navigation.html
@@ -9,15 +9,7 @@
     <div class="navigation-config">
         <div class="notification-menu">
             <div class="notification-icon" onclick="toggleNotificationContainer();">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="27" viewBox="0 0 25 27">
-                    <g transform="translate(-20 -858.5)">
-                        <g>
-                            <path class="notification-bell" d="M44.9,872.383a2.885,2.885,0,0,0-1.224-1.512,8.348,8.348,0,0,1-4.235,1.135,8.225,8.225,0,0,1-8.33-8.1,7.654,7.654,0,0,1,.528-2.833,8.006,8.006,0,0,0-4.9-.675,2.545,2.545,0,0,0-.222-.488,2.936,2.936,0,0,0-3.928-1.039,2.746,2.746,0,0,0-1.028,3.82,1.876,1.876,0,0,0,.317.433c-1.568,1.821-3.014,5.02-.567,9.744,1.458,2.444,2.4,6.036,1.75,8.008-.667,1.969-.142,2.764.442,3.482s2.235.931,3.668.135,7.982-4.521,7.982-4.521,6.584-3.633,8.028-4.443S45.262,873.221,44.9,872.383ZM24.031,861.3a7,7,0,0,0-1.014.7c-.028-.014-.04-.056-.068-.1a1.183,1.183,0,0,1,.444-1.674,1.3,1.3,0,0,1,1.736.459c.014.042.041.069.041.108A6.544,6.544,0,0,0,24.031,861.3Z"/>
-                            <path class="notification-round" d="M45,863.9a5.558,5.558,0,1,1-5.557-5.4A5.48,5.48,0,0,1,45,863.9Z"/>
-                        </g>
-                        <path class="notification-bell" d="M32.088,883.4a4.5,4.5,0,0,0,6.014,1.529,4.217,4.217,0,0,0,1.64-5.814Z"/>
-                    </g>
-                </svg>
+                <img class="load-svg" th:src="@{/assets/theme/{theme}/media/icons/gnb/icon_gnb_notification.svg(theme=${#authentication.details.theme})}" width="25" height="27">
                 <span class="notification-num" id="count"></span>
             </div>
             <div id="notification-container" class="notification-container"></div>
@@ -44,6 +36,7 @@
 <script type="text/javascript" th:inline="javascript">
     let notificationDiv = null;
     window.addEventListener('load', function() {
+        aliceJs.loadSvg();
         notificationDiv = document.getElementById('notification-container');
         hiddenProgressBar();
         setInterval(function () {
