#9280 사용자, 공지사항 메뉴에서 이미지 경로가 올바르지 않다.
- 공지사항 리스트에서 팝업 이미지가 꺠져서 나온다.
- 사용자 리스트에서 상세 정보 확인 시 아바타 이미지때문에 오류가 발생된다.

--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -32,7 +32,7 @@
                 </td>
                 <td width="5%" th:if="${topNotice.popYn}">
                     <a th:attr="onclick=|openPopUp('${topNotice.noticeNo}', '${topNotice.popWidth}', '${topNotice.popHeight}')|">
-                        <img th:src="@{/assets/theme/{theme}/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
+                        <img th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
                     </a>
                 </td>
                 <td width="5%" th:unless="${topNotice.popYn}"></td>
@@ -50,7 +50,7 @@
                 </td>
                 <td width="5%" th:if="${notice.popYn}">
                     <a th:attr="onclick=|openPopUp('${notice.noticeNo}', '${notice.popWidth}', '${notice.popHeight}')|">
-                        <img th:src="@{/assets/theme/{theme}/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
+                        <img th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
                     </a>
                 </td>
                 <td width="5%" th:unless="${notice.popYn}"></td>
