--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -200,7 +200,7 @@
                 let imgPopYn = document.createElement('img');
                 let theme = '[[${#authentication.details.theme}]]'.split('"');
                 imgPopYn.src = '/assets/theme/' + theme[1] +
-                    '/icons/icon_popup.svg';
+                    '/media/icons/icon_popup.svg';
                 imgPopYn.onclick = function() {
                     openPopUp(data.noticeNo, data.popWidth, data.popHeight);
                 }
