--- a/src/main/resources/public/template/token/tokenPopUp.html
+++ b/src/main/resources/public/template/token/tokenPopUp.html
@@ -56,7 +56,7 @@
             }
 
             restSubmit('POST', '/rest/folders', function() {
-                opener.location.reload();
+                aliceDocument.createTokenInfoTab();
                 window.close();
             }, jsonArray, false);
         }
