관련 문서 추가시 미동작 오류 수정

--- a/src/main/resources/public/template/token/tokenPopUp.html
+++ b/src/main/resources/public/template/token/tokenPopUp.html
@@ -56,7 +56,7 @@
             }
 
             restSubmit('POST', '/rest/folders', function() {
-                aliceDocument.createTokenInfoTab();
+                opener.aliceDocument.createTokenInfoTab();
                 window.close();
             }, jsonArray, false);
         }
