--- a/src/main/resources/public/src/scss/portal/_variables.scss
+++ b/src/main/resources/public/src/scss/portal/_variables.scss
@@ -75,4 +75,4 @@ $column-10: $column-init * 10; // 800px
 $column-fluid: 100%;
 
 // dropzone
-$dropzone-folder-path: "../media/icons/dropzone";
+$dropzone-folder-path: "../media/icons/dropzone/";
